# ST-Decoder

./: .gitignore  README.md  pyproject.toml  requirements.txt
latency/: __init__.py  decode_latency.py  fc_vs_st_rounds.py
scripts/: finetune_all_models.sh  finetune_st_ps_extensive.sh  latency_suite.sh  run_mask_ablation_st_full_vs_local.sh  train_general_all.sh
src/: __init__.py  circuit.py  other_models.py  positional_encodings.py  transformer_models.py
train_utils/: __init__.py  config.py  data.py  models.py  training.py
train_utils/cli/: __init__.py  finetune.py  general.py
