[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st-decoder"
version = "0.1.0"
description = "Decoding the surface code with a spatio-temporal transformer"
readme = "README.md"
license = {text = "CC-BY-NC-ND-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Robert Joo", email = "sjoo@exeter.edu"},
]
keywords = ["quantum error correction", "surface code", "transformer", "neural decoder"]

dependencies = [
    "torch>=2.0.0",
    "torch_geometric>=2.4.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "stim>=1.12.0",
    "pymatching>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
]

[project.urls]
Repository = "https://github.com/sapient-sapiens/ST-Decoder"

[tool.setuptools.packages.find]
include = ["src*", "st_decoder*", "analysis*", "latency*"]
